syntax = "proto3";

option csharp_namespace = "REPF.Grpc.Protos";

package forecast;

service ForecastService{
	rpc Forecast (ForecastRequest) returns (ForecastResponse);
}

message ForecastRequest{
	string location = 1;
	double roomCount=2;
}

message ForecastResponse{
	repeated double historicalData=1;
	repeated double lowerBoundForecast=2;
	repeated double forecast=3;
	repeated double upperBoundForecast=4;
}
